# oxide_gambit

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
assets/: pieces.ase  tile.ase
engine/: Cargo.toml
engine/src/: lib.rs  misc.rs
engine/src/chess/: board.rs  direction.rs  display.rs  index.rs  mod.rs  square.rs  state.rs
engine/src/move_gen/: attack.rs  generator.rs  mod.rs  move_gen.rs  moves.rs  normal.rs
engine/src/rules/: def_standard.rs  fen.rs  mod.rs  piece.rs  piece_info.rs
engine/src/state/: board_state.rs  display.rs  mod.rs  state.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  misc.rs
server/src/ai/: mod.rs  (+3 more)
src/: ai.rs  assets.rs  benchmark.rs  bitboard.rs  board.rs  drag.rs  lib.rs  main.rs  misc.rs  move_gen.rs  piece.rs  render.rs  setup.rs  state.rs  theme.rs
src/ai/: ai_sys.rs  app_state.rs  board_eval.rs  hasher.rs  minimax.rs  mod.rs  move_gen.rs  piece.rs  square_table.rs  state.rs  transposition.rs
src/chess/: attack.rs  board.rs  direction.rs  display.rs  mod.rs  move_gen.rs  piece.rs  square.rs  state.rs
src/chess_logic/: chess_state.rs  excecute_move.rs  fen_string.rs  mod.rs  move_gen.rs  other_moves.rs  piece.rs  piece_type.rs  pin.rs  pos.rs  position.rs  state.rs  threat.rs
src/interactive/: drag_and_drop.rs  highlight.rs  mod.rs  mouse_event.rs  window.rs
src/marker/: marker.rs
src/move_gen/: attack.rs  mod.rs  move_gen.rs
src/render/: display_piece.rs  mod.rs  setup.rs  theme.rs
src/rules/: mod.rs  piece.rs  piece_info.rs  setup.rs  standard.rs
(+11 files in other folders)
