[package]
name = "oxide_gambit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "engine" }
bevy = { version = "0.10.0", features = ["dynamic_linking", "wayland"] }
bevy-inspector-egui = "0.18.1"

[workspace]
members = ["proc_macros", "engine"]
